# quantum-programming-package

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  QPU.h  README.md  build_preprocessor.py  main.c  pyproject.toml  pytest.ini  setup.py
.beads/: interactions.jsonl  metadata.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v4.0-MILESTONE-AUDIT.md
benchmarks/: divmod_benchmark.md
c_backend/: suppressions.txt
circuit-gen-results/: plot.py  results.csv  run.py  run_quil.py
docs/: BUGS.md  IMPLEMENTATION_PLAN.md  KNOWN-ISSUES.md  PRD.md  SPECS.md  github-issue-qq-division-leak.md
include/: AssemblyOperations.h  QPU.h  gate.h
python-backend/: qint_bitwise.pxi  qint_comparison.pxi  qint_division.pxi  qint_modular.pxi  qint_operations.pxi  quantum_language.pxd  quantum_language.pyx  setup.py  test.py
scripts/: benchmark_sequences.py  generate_seq_1_4.py  generate_seq_5_8.py  generate_seq_all.py  generate_toffoli_clifft_cq_inc.py  generate_toffoli_decomp_seq.py  generate_toffoli_seq.py  profile_memory_61.py  run_tests_batched.sh  verify_circuit.py
src/: AssemblyOperations.c  Integer.c  IntegerAddition.c  IntegerComparison.c  IntegerMultiplication.c  QPU.c  chess_encoding.py  chess_predicates.py  chess_walk.py  demo.py  gate.c  stack.c
tests/: conftest.py  plot.py  results.csv  run.py  test_array_verify.py  test_bitwise.py  test_bitwise_mixed.py  test_cla_addition.py  test_compare_preservation.py  test_compile.py  test_conditionals.py  test_copy.py  (+15 more)
(+718 files in other folders)
